--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,25 @@
-# Compiled class file
-*.class
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
 
-# Log file
-*.log
+.idea/
 
-# BlueJ files
-*.ctxt
+app/src/androidTest/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+app/src/test/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+BasicsCodelab/src/androidTest/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+BasicsCodelab/src/test/
