--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ app/src/test/
 BasicsCodelab/src/androidTest/
 
 BasicsCodelab/src/test/
+
+LayoutCodelab/src/androidTest/
+
+LayoutCodelab/src/test/
