--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ StateCodelab/stateapp/src/test/
 ThemingCodelab/screenshots/
 
 AnimationCodelab/screenshots/
+
+NavigationCodelab/.idea/
+
+NavigationCodelab/screenshots/
+
+NavigationCodelab/app/src/androidTest/
